add post module
