# config/routes.rb
@@ -8,6 +8,8 @@ Rails.application.routes.draw do
       post "login", to: "auth#login"
 
       get "profile", to: "profile#show"
+      
+      resources :posts
     end
   end
 end
